--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <h3>Text Transform App</h3>
-            <input type="text" id="word" />
+            <input type="text" id="word" placeholder="input text/word" />
             <button id="button">Transform</button>
             <div id="content"></div>
         </div>
